[gd_scene format=3 uid="uid://b8bsyifay8tjn"]

[ext_resource type="Script" uid="uid://bbi164prxkiwl" path="res://Scripts/Card/card.gd" id="1_eumee"]
[ext_resource type="Resource" uid="uid://cc3rgolfuk36k" path="res://Resources/Card.tres" id="2_bnspj"]
[ext_resource type="PackedScene" uid="uid://d1ea2cdb8c3vy" path="res://Scenes/card_texture.tscn" id="2_e6po8"]
[ext_resource type="Script" uid="uid://2ake0pica1o4" path="res://Scripts/Card/card_decision.gd" id="3_bnspj"]
[ext_resource type="Script" uid="uid://cqty5jwcwwwb6" path="res://Scripts/Card/card_drag.gd" id="3_e6po8"]
[ext_resource type="Shader" uid="uid://belydl7cox4uv" path="res://Assets/Shaders/rounded_corners.gdshader" id="4_mm04k"]
[ext_resource type="Script" uid="uid://bnq6gvx10hwgu" path="res://Scripts/Card/card_tweener.gd" id="4_xnv4g"]
[ext_resource type="Texture2D" uid="uid://3kfj3ysdaisq" path="res://Assets/Sprites/card.png" id="5_u5wvb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yvxpl"]
shader = ExtResource("4_mm04k")
shader_parameter/corner_radius = 0.05

[node name="Card" type="Control" unique_id=1337337142]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(324, 576)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_eumee")
cfg = ExtResource("2_bnspj")

[node name="CardTexture" parent="." unique_id=1516392846 instance=ExtResource("2_e6po8")]
material = SubResource("ShaderMaterial_yvxpl")
layout_mode = 1
offset_left = 8.0
offset_top = 14.0
offset_right = -8.0
offset_bottom = -14.444336
pivot_offset = Vector2(324, 576)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_u5wvb")
expand_mode = 1
script = null

[node name="CardDrag" type="Control" parent="." unique_id=870085888]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_e6po8")
cfg = ExtResource("2_bnspj")

[node name="CardDecision" type="Node" parent="." unique_id=318641969]
script = ExtResource("3_bnspj")

[node name="CardTweener" type="Node" parent="." unique_id=1765471744]
script = ExtResource("4_xnv4g")
cfg = ExtResource("2_bnspj")

[connection signal="gui_input" from="CardDrag" to="CardDrag" method="_on_gui_input"]
